--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -29,13 +29,18 @@ $colormap-misc: ("Text": #444,
 		 );
 
  
-$colormap-zentral: ("basis": #003366, "heller": #8fb1ef, "hellste": #dde5f0, "dunkler": #24598f, "dunkelste": #1f4b7a);
+$colormap-zentral: ("basis": #003366, "heller": #8fb1ef, "hellste": #dde5f0, "dunkler": #24598f, "dunkelste": #1f4b7a, "basis-kontrast": #fff);
+// alt, 2015
+
+// $colormap-zentral: ("basis": #002F6C, "heller": #5E9CEE, "hellste": #B7D5FA, "dunkler": #00234F, "dunkelste": #00122A, "basis-kontrast": #fff);
+// neu 13.09
+
 $colormap-primary: $colormap-zentral;
-$colormap-phil: ("basis": #A36B0D, "heller": #d9c689, "hellste": #f3eedf, "dunkler": #805000, "dunkelste": #553500);
-$colormap-med: ("basis": #0381A2, "heller": #bfd6f5, "hellste": #eaf3fc, "dunkler": #026480, "dunkelste": #014e63);
-$colormap-nat: ("basis": #048767, "heller": #aacfbd, "hellste": #e5efea, "dunkler": #006e53, "dunkelste": #00533f);
-$colormap-rw: ("basis": #8d1429, "heller": #c5ac94, "hellste": #ede7de, "dunkler": #690013, "dunkelste": #42000c);
-$colormap-tf: ("basis": #6E7881, "heller": #d2d5d7, "hellste": #ebecee, "dunkler": #53606b, "dunkelste": #3b4956);
+$colormap-phil: ("basis": #A36B0D, "heller": #d9c689, "hellste": #f3eedf, "dunkler": #805000, "dunkelste": #553500, "basis-kontrast": #fff);
+$colormap-med: ("basis": #0381A2, "heller": #bfd6f5, "hellste": #eaf3fc, "dunkler": #026480, "dunkelste": #014e63, "basis-kontrast": #fff);
+$colormap-nat: ("basis": #048767, "heller": #aacfbd, "hellste": #e5efea, "dunkler": #006e53, "dunkelste": #00533f, "basis-kontrast": #fff);
+$colormap-rw: ("basis": #8d1429, "heller": #c5ac94, "hellste": #ede7de, "dunkler": #690013, "dunkelste": #42000c, "basis-kontrast": #fff);
+$colormap-tf: ("basis": #6E7881, "heller": #d2d5d7, "hellste": #ebecee, "dunkler": #53606b, "dunkelste": #3b4956, "basis-kontrast": #fff);
 
 
 @if $farbfamilie == 'med' {
@@ -53,6 +58,7 @@ $colormap-tf: ("basis": #6E7881, "heller": #d2d5d7, "hellste": #ebecee, "dunkler
 }
 
 $colorPrimary:		map-get($colormap-primary, "basis");
+$colorPrimaryContrast:  map-get($colormap-primary, "basis-kontrast");
 $PalettonHellste:	map-get($colormap-primary, "hellste");
 $PalettonHeller:	map-get($colormap-primary, "heller");
 $PalettonDunkler:	map-get($colormap-primary, "dunkler");
@@ -60,49 +66,35 @@ $PalettonDunkelste:	map-get($colormap-primary, "dunkelste");
 
 $colormaps: ("primary": $colormap-primary, "zentral": $colormap-zentral, "phil": $colormap-phil, "med": $colormap-med, "nat": $colormap-nat, "rw": $colormap-rw, "tf": $colormap-tf);
 
-$colorPrimaryContrast: #fff;
-$HeroSiegelColor: $colorPrimary;
 
 		 
 $colorNotice:		map-get($colormap-misc, "Notice"); 	
 $colorZUV:		map-get($colormap-misc, "ZUV"); 
 $colorDefault:		map-get($colormap-misc, "Default"); 
 $colorStandardHellgrau: map-get($colormap-misc, "StandardHellgrau"); 
-$colorContentBorders:	map-get($colormap-misc, "ContentBorders"); 
 $colorContentRegions:	map-get($colormap-misc, "ContentRegions"); 
 $colorMainBackground:	map-get($colormap-misc, "MainBackground"); 
 
 $colorShadows:	rgba(135,132,135,1);
 // Color for shadows
 
+// Hinweis: Für SVG-Grafiken brauchen wir den HEX-Code direkt und können nicht Custom Properies nutzen!
+$socialmedia_icon_bgcolor_hover: $colorPrimaryContrast;
+$socialmedia_icon_color: $colorPrimaryContrast;
+$socialmedia_icon_color_hover: $colorPrimary;
 
 
 $colorPrimaryHeroLight: lighten($colorPrimary, 15%);  // hellere Farbe
-
-
-$colorSubNavCurrent: #fff;
-$colorSubNavCurrentHover: #fff;
-$colorMainMenu: #fff;
-
-
 $colorOverlayLight: rgba(255, 255, 255, 0.15);
 $colorOverlayDark: rgba(0, 0, 0, 0.15);
 // Vorschlag von https://github.com/SebastianHonert/FAU-Einrichtungen/commit/762a7ab636090006af98d4fc502e8e12359c711e#diff-0cecaa3634e3ebf71c0b473a183dff42
 // Mit passenden Variablennamen versehen.
 
-
-$colorButton: #fff;
-$colorSearchPlaceholder: #111;
-$colorSearchInput: #000;
-$colorSearchInputBackgroundFocus: #fff;
-
 // Meta Menu
 // Define Background-Color for Meta Menu at top
-$colorMetaFAUHomeBackground: desaturate(darken($colorStandardHellgrau, 10%), 90%); // #d0d3d8;
-$colorMetaHover: desaturate(lighten($colorDefault, 10%), 40%);
-$colorMetaText: #fff;
-$colorMetaLight: desaturate(lighten($colorDefault, 69%), 75%);
-$colorMetaLightest: desaturate(lighten($colorDefault, 73%), 75%);
+$colorMetaFAUHomeBackground:	desaturate(darken($colorStandardHellgrau, 10%), 90%); // #d0d3d8;
+$colorMetaHover:		desaturate(lighten($colorDefault, 10%), 40%);
+$colorMetaLightest:		desaturate(lighten($colorDefault, 73%), 75%);
 
 
 
@@ -110,8 +102,7 @@ $colorMetaLightest: desaturate(lighten($colorDefault, 73%), 75%);
 $colorCopyright: #fff;
 $colorCopyrightBackground: rgba(0, 0, 0, 0.6);
 
-// Abbrevations, Acronyms
-$colorAbbr: #000;
+
 
 // Font sizes
 $font-size-rembase: 93.75%;
