--- a/src/sass/elements/_code.scss
+++ b/src/sass/elements/_code.scss
@@ -26,7 +26,7 @@ pre {
 	word-wrap: break-word;
 	white-space: pre;
 	white-space: pre-wrap;
-	border: 1px solid $colorContentBorders;
+	border: 1px solid var(--color-ContentBorders);
 	@include border-radius(4px);
 }
 
