--- a/src/sass/elements/_general-classes.scss
+++ b/src/sass/elements/_general-classes.scss
@@ -167,7 +167,7 @@ div.aligncenter {
     left: -10px;
     right: -10px;
     bottom: -10px;
-    border: 1px dashed #777;
+    border: 1px dashed var(--color-StandardHellgrau);
     border-radius: 3px;
 }
 
@@ -175,7 +175,7 @@ div.aligncenter {
     content: "Beispiel";
     font-family: sans-serif;
     text-transform: uppercase;
-    color: #666;
+    color: var(--color-Text);
     font-weight: 700;
     top: -1.7rem;
     right: 10px;
@@ -184,7 +184,7 @@ div.aligncenter {
     position: absolute;
     z-index: 1;
     background: white;
-    border: 1px dashed #777;
+    border: 1px dashed var(--color-StandardHellgrau);
 }
 
 :lang(en) .example:after {
