--- a/src/sass/elements/_headlines.scss
+++ b/src/sass/elements/_headlines.scss
@@ -126,7 +126,7 @@ h3 {
 	
 	#off-canvas & {
 	     @include px2rem($font-size-h3-small);
-		border-bottom: 1px solid #ccc;
+		border-bottom: 1px solid var(--color-StandardHellgrau);
 		margin: 20px 0 0 0;
 		padding: 0 10px;
 	}
