--- a/src/sass/structure/content/_search.scss
+++ b/src/sass/structure/content/_search.scss
@@ -111,7 +111,7 @@
 	}
 	.search-text {
 	     margin: 0 20px;
-	     @include placeholder(#fff);
+	     @include placeholder(var(--color-primary-basis-kontrast));
 
 	    label {
 		@extend .screen-reader-text;
@@ -122,25 +122,26 @@
 	    }
 	    input[type="text"] {
 		@include px2rem($font-size-herosearch);
-		border: 1px solid  var(--color-Default);
+		border: 1px solid  var(--color-primary-dunkler);
 		width: 80%;
 		padding: 5px 10px 5px 30px;
 		height: inherit;
 		margin: 0;
-		background:  var(--color-Default); 
-		color: #fff; // $colorSearchInput;
+
+		background: var(--color-primary-basis);
+		color: var(--color-primary-basis-kontrast);
 
 		&:focus, &:hover {
-			background-color: $colorMetaHover; 
-			border: 1px solid $colorMetaHover;
+			background-color: var(--color-primary-dunkler);
+			border: 1px solid var(--color-primary-dunkelste);
 		}
 	    }
 
 	    input[type="submit"] {
 		@include px2rem($font-size-herosearch);
 		    border: 1px solid var(--color-primary-hellste);
-		    background: $colorSearchInputBackgroundFocus;
-		    color: $colorSearchInput;
+		    background: var(--color-primary-basis-kontrast);
+		    color: var(--color-primary-basis);
 		    padding: 5px 10px;
 		    height: inherit;
 		    margin-left: -30px;
@@ -154,7 +155,7 @@
 		@extend .fa-search;
 		position: relative;
 		margin-right: -30px;
-		color: #fff;
+		color: var(--color-primary-basis-kontrast);
 	    }
 	}
 
