--- a/src/sass/structure/hero/_linkregion.scss
+++ b/src/sass/structure/hero/_linkregion.scss
@@ -10,7 +10,7 @@
     li {
 	display: table;
 	padding-left: 0;
-	color: #fff;
+	color: var(--color-primary-basis-kontrast);
 	
 	@include px2rem($font-size-hero-links);
 
@@ -19,7 +19,7 @@
 	    @extend .fa-angle-right;	
 	    font-weight: bold;
 	    display: table-cell;
-	    color: #fff;
+	    color: var(--color-primary-basis-kontrast);
 	    width: 20px;
 	} 
 	
@@ -71,7 +71,7 @@
 		border-color: var(--color-tf-basis);
 	}	
 	&.white {
-		border-color: #fff;
+		border-color: var(--color-white);
 	}
 	&.gray {
 		border-color: var(--color-StandardHellgrau);
@@ -149,7 +149,7 @@
 	}
 
 	>*, h1, h2, h3 {
-			color:  var(--color-Default);
+	    color:  var(--color-Default);
 	}
 
     }
@@ -172,11 +172,7 @@
 	    margin-top: 30px;
            
 	}
-	
-	.siegel {
-	    bottom: inherit;
-	    top: 10px;
-	}
+
 }
 
 
