--- a/src/sass/structure/layout/_base.scss
+++ b/src/sass/structure/layout/_base.scss
@@ -24,7 +24,7 @@ html, body, button {
 #pagewrapper {
 	min-height: 100%;
 	margin: 0 auto;	
-	background-color: $colorMainBackground;
+	background-color: var(--color-MainBackground);
 	position: relative;
 	
 	display: flex;
